--- a/config/rights.yml
+++ b/config/rights.yml
@@ -76,16 +76,42 @@ __public__:
   - "sessions::destroy"
   - "sessions::new"
   - "sessions::renew"
+  - "animals::show"  
   - "animals::new"
   - "animals::create"
   - "animals::list"
   - "animals::index"
   - "animals::edit"
+  - "animal_groups::show"
   - "animal_groups::new"
   - "animal_groups::create"
   - "animal_groups::list"
   - "animal_groups::index"
   - "animal_groups::edit"
+  - "animal_race_types::show"  
+  - "animal_race_types::new"
+  - "animal_race_types::create"
+  - "animal_race_types::list"
+  - "animal_race_types::index"
+  - "animal_race_types::edit"
+  - "animal_races::show"
+  - "animal_races::new"
+  - "animal_races::create"
+  - "animal_races::list"
+  - "animal_races::index"
+  - "animal_races::edit"
+  - "animal_cares::show"
+  - "animal_cares::new"
+  - "animal_cares::create"
+  - "animal_cares::list"
+  - "animal_cares::index"
+  - "animal_cares::edit"
+  - "animal_care_types::show"
+  - "animal_care_types::new"
+  - "animal_care_types::create"
+  - "animal_care_types::list"
+  - "animal_care_types::index"
+  - "animal_care_types::edit"
 # Make and reload backups
 backup_company:
   actions:
