--- a/config/database.postgis.yml
+++ b/config/database.postgis.yml
@@ -9,12 +9,14 @@
 #       Choose the win32 build.
 #       Install PostgreSQL and put its /bin directory on your path.
 development:
-  adapter: postgresql
+  adapter: postgis
   encoding: unicode
   database: ekylibre_development
   pool: 5
   username: __username__
   password: __password__
+  # script_dir: /usr/share/postgresql/8.4/contrib/postgis-1.5
+  
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -35,17 +37,19 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
+  adapter: postgis
   encoding: unicode
   database: ekylibre_test
   pool: 5
   username: __username__
   password: __password__
+  # script_dir: /usr/share/postgresql/8.4/contrib/postgis-1.5
 
 production:
-  adapter: postgresql
+  adapter: postgis
   encoding: unicode
   database: ekylibre_production
   pool: 5
   username: __username__
   password: __password__
+  # script_dir: /usr/share/postgresql/8.4/contrib/postgis-1.5
