--- a/config/database.postgis.yml
+++ b/config/database.postgis.yml
@@ -16,7 +16,10 @@ development:
   username: __username__
   password: __password__
   # script_dir: /usr/share/postgresql/8.4/contrib/postgis-1.5
-  
+  # postgis_extension: true
+  # su_username: dbroot
+  # su_password: dbpassword
+  # schema_search_path: public,postgis
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
