adding disease management in animals husbandry

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -156,6 +156,10 @@ __public__:
   - "animals::new"
   - "animals::show"
   - "companies::register"
+  - "diseases::show"
+  - "diseases::new"
+  - "diseases::create"
+  - "diseases::edit"
   - "sessions::create"
   - "sessions::destroy"
   - "sessions::new"
