refactoring animals husbandry with events

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -124,12 +124,12 @@ __public__:
   - "animal_care_types::list # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "animal_care_types::new # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "animal_care_types::show # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
-  - "animal_cares::create"
-  - "animal_cares::edit"
-  - "animal_cares::index"
-  - "animal_cares::list"
-  - "animal_cares::new"
-  - "animal_cares::show"
+  - "animal_events::create"
+  - "animal_events::edit"
+  - "animal_events::index"
+  - "animal_events::list"
+  - "animal_events::new"
+  - "animal_events::show"
   - "animal_groups::create"
   - "animal_groups::edit"
   - "animal_groups::index"
