--- a/config/rights.yml
+++ b/config/rights.yml
@@ -156,6 +156,12 @@ __public__:
   - "animal_events::list"
   - "animal_events::new"
   - "animal_events::show"
+  - "animal_event_natures::create"
+  - "animal_event_natures::edit"
+  - "animal_event_natures::index"
+  - "animal_event_natures::list"
+  - "animal_event_natures::new"
+  - "animal_event_natures::show"
   - "animal_groups::create"
   - "animal_groups::edit"
   - "animal_groups::index"
