--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 rvm:
-  - 1.9.2
   - 1.9.3
 env:
   - DB=postgis
+  - DB=spatialite
 #  - DB=mysql
 #  - DB=postgresql
 #  - DB=sqlite3
 before_script:
-  - sh -c "if [ '$DB' = 'postgis' ]; then psql -c 'DROP DATABASE IF EXISTS ekylibre_test;' -U postgres; fi"
-  - sh -c "if [ '$DB' = 'postgis' ]; then psql -c 'CREATE DATABASE ekylibre_test;' -U postgres; fi"
-  - "bundle exec rake db:migrate" #  > migrate.log
-script: "bundle exec rake test"
+  - test/ci/setup
+  - bundle exec rake db:migrate
+script: bundle exec rake test
