--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 rvm:
+  - 1.9.2
   - 1.9.3
 env:
-  - DB=postgis-1.5
-  - DB=postgis-2.0
+  - DB=postgis POSTGIS=1.5
+  - DB=postgis POSTGIS=2.0
   - DB=spatialite
 #  - DB=mysql
 #  - DB=postgresql
