--- a/test/fixtures/document_templates.yml
+++ b/test/fixtures/document_templates.yml
@@ -61,7 +61,10 @@ document_templates_001:
   creator_id: 1
   by_default: true
   id: 1
+  language: '???'
   name: "Lorem ipsum"
+  nature: sales_invoice
+  family: management
   source: "<?xml version='1.0' encoding='utf-8'?><template><document></document></template>"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
@@ -70,8 +73,11 @@ document_templates_002:
   active: true
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  by_default: true
+  by_default: false
+  nature: sales_invoice
+  family: management
   id: 2
+  language: '???'
   name: "Lorem ipsum"
   source: "<?xml version='1.0' encoding='utf-8'?>"
   updated_at: 2009-07-19 19:13:59 +02:00
