--- a/test/fixtures/entities.yml
+++ b/test/fixtures/entities.yml
@@ -125,6 +125,7 @@ entities_001:
   code: 00001
   full_name: Ferstivall LTD
   last_name: Ferstivall LTD
+  language: 'eng'
   of_company: true
   id: 1
   created_at: 2009-07-19 19:13:59 +02:00
