--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ rvm:
 env:
   - DB=postgis POSTGIS=1.5
   - DB=postgis POSTGIS=2.0
-  - DB=spatialite
+#  - DB=spatialite
+
 #  - DB=mysql
 #  - DB=postgresql
 #  - DB=sqlite3
