--- a/test/fixtures/document_templates.yml
+++ b/test/fixtures/document_templates.yml
@@ -66,6 +66,7 @@ document_templates_001:
   nature: sales_invoice
   family: management
   source: "<?xml version='1.0' encoding='utf-8'?><template><document></document></template>"
+  cache: "# Fake ruby"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -80,6 +81,7 @@ document_templates_002:
   language: '???'
   name: "Lorem ipsum"
   source: "<?xml version='1.0' encoding='utf-8'?>"
+  cache: "# Fake ruby"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
