--- a/test/fixtures/incoming_payment_modes.yml
+++ b/test/fixtures/incoming_payment_modes.yml
@@ -59,6 +59,7 @@
 #   with_deposit: true
 #
 incoming_payment_modes_001:
+  attorney_journal_id: 1
   cash_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -69,6 +70,7 @@ incoming_payment_modes_001:
   with_accounting: true
 
 incoming_payment_modes_002:
+  attorney_journal_id: 1
   cash_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
