--- a/test/fixtures/outgoing_payment_modes.yml
+++ b/test/fixtures/outgoing_payment_modes.yml
@@ -45,6 +45,7 @@
 #   with_accounting: true
 #
 outgoing_payment_modes_001:
+  attorney_journal_id: 1
   cash_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -55,6 +56,7 @@ outgoing_payment_modes_001:
   with_accounting: true
 
 outgoing_payment_modes_002:
+  attorney_journal_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
