--- a/test/fixtures/purchases.yml
+++ b/test/fixtures/purchases.yml
@@ -62,9 +62,11 @@
 #
 purchases_001:
   amount: 0
+
   pretax_amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  currency: "EUR"
   id: 1
   number: "P000001"
   nature_id: 1
@@ -79,6 +81,7 @@ purchases_002:
   pretax_amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  currency: "EUR"
   id: 2
   number: "P000002"
   nature_id: 1
@@ -93,6 +96,7 @@ purchases_003:
   nature_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  currency: "EUR"
   id: 3
   number: "P000003"
   state: "order"
@@ -106,6 +110,7 @@ purchases_004:
   created_at: 2009-07-19 19:13:59 +02:00
   nature_id: 1
   creator_id: 1
+  currency: "USD"
   id: 4
   number: "P000004"
   planned_on: 2009-08-20
@@ -119,6 +124,7 @@ purchases_005:
   pretax_amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  currency: "USD"
   id: 5
   number: "P000005"
   planned_on: 2009-08-20
