--- a/test/fixtures/entity_addresses.yml
+++ b/test/fixtures/entity_addresses.yml
@@ -76,13 +76,12 @@ entity_addresses_002:
   code: AAAB
   canal: phone
   coordinate: 1234567890
-  by_default: true
+  by_default: false
   id: 2
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   updated_at: 2006-07-19 19:13:59 +02:00
   updater_id: 1
-
 
 entity_addresses_003:
   entity_id: 1
@@ -99,4 +98,3 @@ entity_addresses_003:
   creator_id: 1
   updated_at: 2006-07-19 19:13:59 +02:00
   updater_id: 1
-
