Removes PostGIS 1.5 from tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
 # - 1.9.2
   - 1.9.3
 env:
-  - DB=postgis POSTGIS=1.5
+#  - DB=postgis POSTGIS=1.5
   - DB=postgis POSTGIS=2.0
 #  - DB=spatialite
 
