--- a/test/fixtures/cashes.yml
+++ b/test/fixtures/cashes.yml
@@ -72,6 +72,7 @@ cashes_001:
   journal_id: 1
   mode: "iban"
   name: "Lorem ipsum"
+  nature: bank_account
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -87,6 +88,7 @@ cashes_002:
   journal_id: 1
   mode: "iban"
   name: "Lorem ipsum"
+  nature: bank_account
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -101,6 +103,6 @@ cashes_003:
   journal_id: 1
   mode: "iban"
   name: "Lorem ipsum"
-  nature: "cash"
+  nature: "cash_box"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
