Continues to normalize

--- a/test/fixtures/custom_fields.yml
+++ b/test/fixtures/custom_fields.yml
@@ -20,20 +20,22 @@
 # 
 # == Table: custom_fields
 #
-#  active       :boolean          default(TRUE), not null
-#  created_at   :datetime         not null
-#  creator_id   :integer          
-#  decimal_max  :decimal(19, 4)   
-#  decimal_min  :decimal(19, 4)   
-#  id           :integer          not null, primary key
-#  length_max   :integer          
-#  lock_version :integer          default(0), not null
-#  name         :string(255)      not null
-#  nature       :string(8)        not null
-#  position     :integer          
-#  required     :boolean          not null
-#  updated_at   :datetime         not null
-#  updater_id   :integer          
+#  active          :boolean          default(TRUE), not null
+#  created_at      :datetime         not null
+#  creator_id      :integer          
+#  customized_type :string(255)      not null
+#  id              :integer          not null, primary key
+#  lock_version    :integer          default(0), not null
+#  maximal_length  :integer          
+#  maximal_value   :decimal(19, 4)   
+#  minimal_length  :integer          default(0), not null
+#  minimal_value   :decimal(19, 4)   
+#  name            :string(255)      not null
+#  nature          :string(8)        not null
+#  position        :integer          
+#  required        :boolean          not null
+#  updated_at      :datetime         not null
+#  updater_id      :integer          
 #
 #
 # == Fixture: custom_fields
@@ -42,7 +44,9 @@
 #   active: true
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   customized_type: "Lorem ipsum"
 #   id: 1
+#   minimal_length: 0
 #   name: "Lorem ipsum"
 #   nature: "Lorem ipsum"
 #   required: true
@@ -53,6 +57,7 @@ custom_fields_001:
   active: true
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  customized_type: 'Entity'
   id: 1
   name: "Test field"
   nature: "choice"
@@ -64,6 +69,7 @@ custom_fields_002:
   active: true
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  customized_type: 'Entity'
   id: 2
   name: "Useless field"
   nature: "string"
