--- a/test/fixtures/companies.yml
+++ b/test/fixtures/companies.yml
@@ -20,16 +20,23 @@
 # 
 # == Table: companies
 #
-#  code :string(16)       not null
-#  id   :integer          not null, primary key
-#  log  :text             
+#  code         :string(16)       not null
+#  created_at   :datetime         
+#  creator_id   :integer          
+#  id           :integer          not null, primary key
+#  lock_version :integer          default(0), not null
+#  log          :text             
+#  updated_at   :datetime         
+#  updater_id   :integer          
 #
 #
 # == Fixture: companies
 #
 # companies_001:
 #   code: "Lorem ipsum"
+#   creator_id: 1
 #   id: 1
+#   updater_id: 1
 #
 
 companies_001:
