--- a/test/fixtures/custom_field_data.yml
+++ b/test/fixtures/custom_field_data.yml
@@ -25,10 +25,11 @@
 #  created_at      :datetime         not null
 #  creator_id      :integer          
 #  custom_field_id :integer          not null
+#  customized_id   :integer          not null
+#  customized_type :string(255)      not null
 #  date_value      :date             
 #  datetime_value  :datetime         
 #  decimal_value   :decimal(19, 4)   
-#  entity_id       :integer          not null
 #  id              :integer          not null, primary key
 #  lock_version    :integer          default(0), not null
 #  string_value    :text             
@@ -42,7 +43,8 @@
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   custom_field_id: 1
-#   entity_id: 1
+#   customized_id: 1
+#   customized_type: "Lorem ipsum"
 #   id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
