--- a/test/fixtures/incoming_payment_modes.yml
+++ b/test/fixtures/incoming_payment_modes.yml
@@ -24,7 +24,7 @@
 #  cash_id                 :integer          
 #  commission_account_id   :integer          
 #  commission_base_amount  :decimal(19, 4)   default(0.0), not null
-#  commission_percent      :decimal(19, 4)   default(0.0), not null
+#  commission_percentage   :decimal(19, 4)   default(0.0), not null
 #  created_at              :datetime         not null
 #  creator_id              :integer          
 #  depositables_account_id :integer          
@@ -46,7 +46,7 @@
 #
 # incoming_payment_modes_001:
 #   commission_base_amount: 0
-#   commission_percent: 0
+#   commission_percentage: 0
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   detail_payments: true
