--- a/test/fixtures/taxes.yml
+++ b/test/fixtures/taxes.yml
@@ -57,7 +57,7 @@ taxes_001:
   id: 1
   included: false
   name: "Lorem ipsum"
-  nature: "percent"
+  nature: "percentage"
   reductible: true
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
@@ -69,7 +69,7 @@ taxes_002:
   id: 2
   included: false
   name: "LoremIpsum2"
-  nature: "percent"
+  nature: "percentage"
   reductible: true
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
