--- a/test/fixtures/stock_moves.yml
+++ b/test/fixtures/stock_moves.yml
@@ -71,7 +71,7 @@ stock_moves_001:
   unit_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  virtual: true
+  virtual: false
 
 stock_moves_002:
   created_at: 2009-07-19 19:13:59 +02:00
@@ -87,3 +87,16 @@ stock_moves_002:
   updater_id: 1
   virtual: true
 
+stock_moves_003:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 3
+  warehouse_id: 3
+  name: "Lorem ipsum"
+  planned_on: 2009-07-19
+  product_id: 1
+  quantity: -15
+  unit_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  virtual: false
