--- a/test/fixtures/stock_transfers.yml
+++ b/test/fixtures/stock_transfers.yml
@@ -65,7 +65,10 @@ stock_transfers_001:
   number: "1"
   planned_on: 2009-07-19
   product_id: 1
-  quantity: 0
+  quantity: 15
+  second_stock_move_id: 3
+  second_warehouse_id: 3
+  unit_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
