first part on refactoring animal's treatment and normalize.

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -55,14 +55,6 @@
 #   - "animal_prescriptions::new"
 #   - "animal_prescriptions::show"
 #   - "animal_prescriptions::update"
-#   - "animal_race_natures::create"
-#   - "animal_race_natures::destroy"
-#   - "animal_race_natures::edit"
-#   - "animal_race_natures::index"
-#   - "animal_race_natures::list"
-#   - "animal_race_natures::new"
-#   - "animal_race_natures::show"
-#   - "animal_race_natures::update"
 #   - "animal_races::destroy"
 #   - "animal_races::update"
 #   - "animal_treatments::create"
@@ -174,6 +166,12 @@ __public__:
   - "animal_events::list"
   - "animal_events::new"
   - "animal_events::show"
+  - "animal_group_events::create"
+  - "animal_group_events::edit"
+  - "animal_group_events::index"
+  - "animal_group_events::list"
+  - "animal_group_events::new"
+  - "animal_group_events::show"
   - "animal_groups::create"
   - "animal_groups::edit"
   - "animal_groups::index"
