--- a/test/fixtures/animal_group_events.yml
+++ b/test/fixtures/animal_group_events.yml
@@ -18,27 +18,31 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: animal_race_natures
+# == Table: animal_group_events
 #
-#  comment      :text             
-#  created_at   :datetime         not null
-#  creator_id   :integer          
-#  description  :text             
-#  id           :integer          not null, primary key
-#  lock_version :integer          default(0), not null
-#  name         :string(255)      not null
-#  updated_at   :datetime         not null
-#  updater_id   :integer          
+#  animal_group_id :integer          
+#  comment         :text             
+#  created_at      :datetime         not null
+#  creator_id      :integer          
+#  id              :integer          not null, primary key
+#  lock_version    :integer          default(0), not null
+#  moved_at        :datetime         
+#  nature_id       :integer          
+#  parent_id       :integer          
+#  planned_at      :datetime         
+#  started_at      :datetime         
+#  stopped_at      :datetime         
+#  updated_at      :datetime         not null
+#  updater_id      :integer          
+#  watcher_id      :integer          
 #
 #
-# == Fixture: animal_race_natures
+# == Fixture: animal_group_events
 #
-# animal_race_natures_001:
+# animal_group_events_001:
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
-#   name: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
-
