--- a/test/fixtures/animal_groups.yml
+++ b/test/fixtures/animal_groups.yml
@@ -20,8 +20,6 @@
 # 
 # == Table: animal_groups
 #
-#  age_max      :integer          
-#  age_min      :integer          
 #  comment      :text             
 #  created_at   :datetime         not null
 #  creator_id   :integer          
@@ -29,8 +27,7 @@
 #  id           :integer          not null, primary key
 #  lock_version :integer          default(0), not null
 #  name         :string(255)      not null
-#  pregnant     :boolean          not null
-#  sex          :string(16)       
+#  parent_id    :integer          
 #  updated_at   :datetime         not null
 #  updater_id   :integer          
 #
@@ -42,7 +39,6 @@
 #   creator_id: 1
 #   id: 1
 #   name: "Lorem ipsum"
-#   pregnant: true
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
@@ -51,25 +47,25 @@ animal_groups_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
-  name: "Lorem ipsum"
-  pregnant: false
+  name: "VACHE"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+  parent_id: 1
 
 animal_groups_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
-  name: "Lorem ipsum 2 (to destroy)"
-  pregnant: false
+  name: "VACHE TARIE (to destroy)"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+  parent_id: 1
 
 animal_groups_003:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 3
-  name: "Lorem ipsum 3"
-  pregnant: false
+  name: "VACHE LAITIERE"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+  parent_id: 1
