--- a/test/fixtures/animal_races.yml
+++ b/test/fixtures/animal_races.yml
@@ -28,7 +28,7 @@
 #  id           :integer          not null, primary key
 #  lock_version :integer          default(0), not null
 #  name         :string(255)      not null
-#  nature_id    :integer          not null
+#  parent_id    :integer          
 #  updated_at   :datetime         not null
 #  updater_id   :integer          
 #
@@ -40,7 +40,6 @@
 #   creator_id: 1
 #   id: 1
 #   name: "Lorem ipsum"
-#   nature_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
@@ -49,26 +48,25 @@ animal_races_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
-  name: "Lorem ipsum"
-  nature_id: 1
+  name: "BOVINS"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+  parent_id: 1
 
 animal_races_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
-  name: "Lorem ipsum 2"
-  nature_id: 1
+  name: "NORMANDE"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+  parent_id: 1
 
 animal_races_003:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 3
-  name: "Lorem ipsum 3"
-  nature_id: 1
+  name: "CHAROLAISE"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-
+  parent_id: 1
