--- a/test/fixtures/animals.yml
+++ b/test/fixtures/animals.yml
@@ -20,34 +20,34 @@
 # 
 # == Table: animals
 #
+#  arrival_reasons       :string(255)      
+#  arrived_on            :date             
 #  born_on               :date             
 #  comment               :text             
 #  created_at            :datetime         not null
 #  creator_id            :integer          
+#  departed_on           :date             
+#  departure_reasons     :string(255)      
 #  description           :text             
+#  external              :boolean          not null
 #  father_id             :integer          
 #  group_id              :integer          not null
 #  id                    :integer          not null, primary key
 #  identification_number :string(255)      not null
-#  income_on             :date             
-#  income_reasons        :string(255)      
-#  is_external           :boolean          not null
-#  is_reproductor        :boolean          not null
 #  lock_version          :integer          default(0), not null
 #  mother_id             :integer          
 #  name                  :string(255)      not null
-#  outgone_on            :date             
-#  outgone_reasons       :string(255)      
 #  owner_id              :integer          
 #  picture_content_type  :string(255)      
 #  picture_file_name     :string(255)      
 #  picture_file_size     :integer          
 #  picture_updated_at    :datetime         
 #  race_id               :integer          
+#  reproductor           :boolean          not null
 #  sex                   :string(16)       default("male"), not null
 #  updated_at            :datetime         not null
 #  updater_id            :integer          
-#  working_number        :string(255)      
+#  work_number           :string(255)      
 #
 #
 # == Fixture: animals
@@ -55,12 +55,12 @@
 # animals_001:
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   external: true
 #   group_id: 1
 #   id: 1
 #   identification_number: "Lorem ipsum"
-#   is_external: true
-#   is_reproductor: true
 #   name: "Lorem ipsum"
+#   reproductor: true
 #   sex: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
@@ -73,8 +73,8 @@ animals_001:
   group_id: 1
   id: 1
   identification_number: "LI1"
-  is_external: true
-  is_reproductor: true
+  external: true
+  reproductor: true
   name: "Lorem ipsum 1"
   sex: "female"
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -86,8 +86,8 @@ animals_002:
   group_id: 1
   id: 2
   identification_number: "LI2"
-  is_external: true
-  is_reproductor: true
+  external: true
+  reproductor: true
   name: "Lorem ipsum 2"
   sex: "male"
   updated_at: 2009-07-19 19:13:59 +02:00
