--- a/test/fixtures/animal_diagnostics.yml
+++ b/test/fixtures/animal_diagnostics.yml
@@ -41,4 +41,13 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
-
+animal_diagnostics_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  symptoms: "filaments"
+  event_id: 1
+  disease_id: 1
+  corpse_location: "mamelle ARD"
