--- a/test/fixtures/animal_diseases.yml
+++ b/test/fixtures/animal_diseases.yml
@@ -41,4 +41,11 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
-
+animal_diseases_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  name: "Mamitte"
+  code: "M"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
