--- a/test/fixtures/animal_event_natures.yml
+++ b/test/fixtures/animal_event_natures.yml
@@ -46,7 +46,7 @@ animal_event_natures_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
-  name: "Lorem ipsum"
+  name: "Traitement"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -54,7 +54,7 @@ animal_event_natures_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
-  name: "Lorem ipsum 2"
+  name: "Observation"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -62,6 +62,6 @@ animal_event_natures_003:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 3
-  name: "Lorem ipsum 3"
+  name: "Reproduction"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
