--- a/test/fixtures/animal_events.yml
+++ b/test/fixtures/animal_events.yml
@@ -56,18 +56,23 @@ animal_events_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
-  name: "Lorem ipsum"
+  name: "Mamitte"
   nature_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+  animal_id: 1
+  watcher_id: 1
+
 
 animal_events_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
   name: "Lorem ipsum 2"
-  nature_id: 1
+  nature_id: 2
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+  animal_id: 1
+  watcher_id: 1
 
 
