--- a/test/fixtures/animal_posologies.yml
+++ b/test/fixtures/animal_posologies.yml
@@ -53,4 +53,17 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
-
+animal_posologies_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  currative_quantity: 60.0
+  quantity_delay: "3J"
+  quantity_interval: "12H"
+  id: 1
+  drug_id: 1
+  animal_race_id: 1
+  product_category_id: 1
+  preventive_quantity: 20.0
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  drug_admission_way: "in"
