--- a/test/fixtures/animal_prescriptions.yml
+++ b/test/fixtures/animal_prescriptions.yml
@@ -45,4 +45,12 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
-
+animal_prescriptions_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  prescriptor_id: 1
+  name: "211000343"
+  prescription_number: "211000343"
