--- a/test/fixtures/animal_treatments.yml
+++ b/test/fixtures/animal_treatments.yml
@@ -49,4 +49,17 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
-
+animal_treatments_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  drug_id: 1
+  drug_admission_way: "in"
+  event_id: 1
+  quantity_delay: "5J"
+  quantity_interval: "12H"
+  prescription_id: 1
+  quantity: 3
+  started_at: 2009-07-19 19:13:59 +02:00
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
