--- a/test/fixtures/animals.yml
+++ b/test/fixtures/animals.yml
@@ -70,6 +70,7 @@
 animals_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  born_on: 2009-07-19
   group_id: 1
   id: 1
   identification_number: "LI1"
@@ -83,6 +84,7 @@ animals_001:
 animals_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  born_on: 2009-07-31
   group_id: 1
   id: 2
   identification_number: "LI2"
