--- a/test/fixtures/product_categories.yml
+++ b/test/fixtures/product_categories.yml
@@ -47,20 +47,20 @@
 #   updater_id: 1
 #
 product_categories_001:
-  catalog_name: "Lorem ipsum"
+  catalog_name: "Produits Laitiers"
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
-  name: "Lorem ipsum"
+  name: "Produits Laitiers"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
 product_categories_002:
-  catalog_name: "Lorem ipsum 2"
+  catalog_name: "Produits Carnés"
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
-  name: "Lorem ipsum 2"
+  name: "Viandes"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
