Removes all add_to_base methods in models and in patches.
Fixes #100.

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -80,13 +80,6 @@
 #   - "dashboards::settings_sales"
 #   - "dashboards::settings_stocks"
 #   - "entity_natures::unroll"
-#   - "interfacers::autocomplete"
-#   - "interfacers::search_for"
-#   - "interfacers::search_for_entities"
-#   - "interfacers::search_for_purchase_products"
-#   - "interfacers::search_for_suppliers"
-#   - "interfacers::select_options"
-#   - "interfacers::unroll"
 #   - "preferences::create"
 #   - "preferences::destroy"
 #   - "preferences::edit"
@@ -143,13 +136,13 @@ __minimum__:
   - "dashboards::welcome"
   - "help::index"
   - "help::show"
-  - "interfacers::product_trackings"
-  - "interfacers::product_units"
-  - "interfacers::toggle_module"
-  - "interfacers::toggle_side"
-  - "interfacers::toggle_tab"
-  - "interfacers::toggle_view_mode"
-  - "interfacers::unroll_options"
+  - "interfacers::product_trackings # NONEXISTENT ACTION !!!"
+  - "interfacers::product_units # NONEXISTENT ACTION !!!"
+  - "interfacers::toggle_module # NONEXISTENT ACTION !!!"
+  - "interfacers::toggle_side # NONEXISTENT ACTION !!!"
+  - "interfacers::toggle_tab # NONEXISTENT ACTION !!!"
+  - "interfacers::toggle_view_mode # NONEXISTENT ACTION !!!"
+  - "interfacers::unroll_options # NONEXISTENT ACTION !!!"
   - "myselves::change_password"
   - "myselves::statistics"
   - "settings::about"
@@ -487,7 +480,7 @@ manage_districts:
   - "districts::list"
   - "districts::new"
   - "districts::update"
-  - "interfacers::search_for_districts"
+  - "interfacers::search_for_districts # NONEXISTENT ACTION !!!"
 # Gérer les modèles de document
 manage_document_templates:
   actions:
@@ -525,9 +518,9 @@ manage_entities:
   - "entity_addresses::update"
   - "interfacers::autocomplete_for_area_name"
   - "interfacers::autocomplete_for_entity_origin"
-  - "interfacers::search_for_attorneys_accounts"
-  - "interfacers::search_for_clients_accounts"
-  - "interfacers::search_for_suppliers_accounts"
+  - "interfacers::search_for_attorneys_accounts # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_clients_accounts # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_suppliers_accounts # NONEXISTENT ACTION !!!"
 # Gérer les types de fiche
 manage_entities_natures:
   actions:
@@ -577,8 +570,8 @@ manage_estimates:
   actions:
   - "dashboards::sales"
   - "dashboards::sales"
-  - "interfacers::search_for_available_prices"
-  - "interfacers::search_for_clients"
+  - "interfacers::search_for_available_prices # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_clients # NONEXISTENT ACTION !!!"
   - "prices::find"
   - "sale_lines::create"
   - "sale_lines::destroy"
@@ -711,7 +704,7 @@ manage_journal_entries:
   - "accounts::unmark"
   - "dashboards::accountancy"
   - "dashboards::accountancy"
-  - "interfacers::search_for_account"
+  - "interfacers::search_for_account # NONEXISTENT ACTION !!!"
   - "journal_entries::create"
   - "journal_entries::destroy"
   - "journal_entries::edit"
@@ -822,7 +815,7 @@ manage_operations:
   actions:
   - "dashboards::production"
   - "dashboards::production"
-  - "interfacers::search_for_operation_products"
+  - "interfacers::search_for_operation_products # NONEXISTENT ACTION !!!"
   - "operation_natures::create"
   - "operation_natures::destroy"
   - "operation_natures::edit"
@@ -1079,8 +1072,8 @@ manage_taxes:
   actions:
   - "dashboards::accountancy"
   - "dashboards::accountancy"
-  - "interfacers::search_for_collected_account"
-  - "interfacers::search_for_paid_account"
+  - "interfacers::search_for_collected_account # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_paid_account # NONEXISTENT ACTION !!!"
   - "taxes::create"
   - "taxes::destroy"
   - "taxes::edit"
