Activates selectors in nested forms

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -79,6 +79,7 @@
 #   - "dashboards::settings_relationship"
 #   - "dashboards::settings_sales"
 #   - "dashboards::settings_stocks"
+#   - "entity_addresses::unroll"
 #   - "entity_natures::unroll"
 #   - "preferences::create"
 #   - "preferences::destroy"
@@ -136,13 +137,13 @@ __minimum__:
   - "dashboards::welcome"
   - "help::index"
   - "help::show"
-  - "interfacers::product_trackings # NONEXISTENT ACTION !!!"
-  - "interfacers::product_units # NONEXISTENT ACTION !!!"
-  - "interfacers::toggle_module # NONEXISTENT ACTION !!!"
-  - "interfacers::toggle_side # NONEXISTENT ACTION !!!"
-  - "interfacers::toggle_tab # NONEXISTENT ACTION !!!"
-  - "interfacers::toggle_view_mode # NONEXISTENT ACTION !!!"
-  - "interfacers::unroll_options # NONEXISTENT ACTION !!!"
+  - "interfacers::product_trackings # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::product_units # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::toggle_module # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::toggle_side # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::toggle_tab # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::toggle_view_mode # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::unroll_options # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "myselves::change_password"
   - "myselves::statistics"
   - "settings::about"
@@ -480,7 +481,7 @@ manage_districts:
   - "districts::list"
   - "districts::new"
   - "districts::update"
-  - "interfacers::search_for_districts # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_districts # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
 # Gérer les modèles de document
 manage_document_templates:
   actions:
@@ -518,9 +519,9 @@ manage_entities:
   - "entity_addresses::update"
   - "interfacers::autocomplete_for_area_name"
   - "interfacers::autocomplete_for_entity_origin"
-  - "interfacers::search_for_attorneys_accounts # NONEXISTENT ACTION !!!"
-  - "interfacers::search_for_clients_accounts # NONEXISTENT ACTION !!!"
-  - "interfacers::search_for_suppliers_accounts # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_attorneys_accounts # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_clients_accounts # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_suppliers_accounts # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
 # Gérer les types de fiche
 manage_entities_natures:
   actions:
@@ -570,8 +571,8 @@ manage_estimates:
   actions:
   - "dashboards::sales"
   - "dashboards::sales"
-  - "interfacers::search_for_available_prices # NONEXISTENT ACTION !!!"
-  - "interfacers::search_for_clients # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_available_prices # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_clients # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "prices::find"
   - "sale_lines::create"
   - "sale_lines::destroy"
@@ -704,7 +705,7 @@ manage_journal_entries:
   - "accounts::unmark"
   - "dashboards::accountancy"
   - "dashboards::accountancy"
-  - "interfacers::search_for_account # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_account # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "journal_entries::create"
   - "journal_entries::destroy"
   - "journal_entries::edit"
@@ -815,7 +816,7 @@ manage_operations:
   actions:
   - "dashboards::production"
   - "dashboards::production"
-  - "interfacers::search_for_operation_products # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_operation_products # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "operation_natures::create"
   - "operation_natures::destroy"
   - "operation_natures::edit"
@@ -1072,8 +1073,8 @@ manage_taxes:
   actions:
   - "dashboards::accountancy"
   - "dashboards::accountancy"
-  - "interfacers::search_for_collected_account # NONEXISTENT ACTION !!!"
-  - "interfacers::search_for_paid_account # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_collected_account # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_paid_account # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "taxes::create"
   - "taxes::destroy"
   - "taxes::edit"
