--- a/test/fixtures/product_group_passings.yml
+++ b/test/fixtures/product_group_passings.yml
@@ -31,12 +31,13 @@
 #  updated_at   :datetime         not null
 #  updater_id   :integer          
 #
-
-
-class ProductGroupPassing < CompanyRecord
-  attr_accessible :entered_at, :departed_at, :group_id, :product_id
-  belongs_to :group, :class_name => "ProductGroup"
-  belongs_to :product, :class_name => "Product"
-  #[VALIDATORS[ Do not edit these lines directly. Use `rake clean:validations`.
-  #]VALIDATORS]
-end
+#
+# == Fixture: product_group_passings
+#
+# product_group_passings_001:
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#
