--- a/test/fixtures/product_natures.yml
+++ b/test/fixtures/product_natures.yml
@@ -1,71 +1,71 @@
 # = Informations
-# 
+#
 # == License
-# 
+#
 # Ekylibre - Simple ERP
 # Copyright (C) 2009-2013 Brice Texier, Thibaud Merigon
-# 
+#
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation, either version 3 of the License, or
 # any later version.
-# 
+#
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
-# 
+#
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
-# 
-# == Table: product_natures
+#
+# == Table: products
 #
 #  active                     :boolean          default(TRUE), not null
-#  catalog_description        :text             
+#  catalog_description        :text
 #  catalog_name               :string(255)      not null
 #  category_id                :integer          not null
-#  code                       :string(16)       
-#  code2                      :string(64)       
-#  comment                    :text             
+#  code                       :string(16)
+#  code2                      :string(64)
+#  comment                    :text
 #  created_at                 :datetime         not null
-#  creator_id                 :integer          
+#  creator_id                 :integer
 #  critic_quantity_min        :decimal(19, 4)   default(1.0)
 #  deliverable                :boolean          not null
-#  description                :text             
-#  ean13                      :string(13)       
+#  description                :text
+#  ean13                      :string(13)
 #  for_immobilizations        :boolean          not null
 #  for_productions            :boolean          not null
 #  for_purchases              :boolean          not null
 #  for_sales                  :boolean          default(TRUE), not null
 #  id                         :integer          not null, primary key
-#  immobilizations_account_id :integer          
+#  immobilizations_account_id :integer
 #  lock_version               :integer          default(0), not null
 #  name                       :string(255)      not null
 #  nature                     :string(16)       not null
 #  number                     :integer          not null
 #  price                      :decimal(19, 4)   default(0.0)
 #  published                  :boolean          not null
-#  purchases_account_id       :integer          
+#  purchases_account_id       :integer
 #  quantity_max               :decimal(19, 4)   default(0.0)
 #  quantity_min               :decimal(19, 4)   default(0.0)
 #  reduction_submissive       :boolean          not null
-#  sales_account_id           :integer          
+#  sales_account_id           :integer
 #  stockable                  :boolean          not null
-#  subscription_nature_id     :integer          
-#  subscription_period        :string(255)      
-#  subscription_quantity      :integer          
+#  subscription_nature_id     :integer
+#  subscription_period        :string(255)
+#  subscription_quantity      :integer
 #  trackable                  :boolean          not null
 #  unit_id                    :integer          not null
 #  unquantifiable             :boolean          not null
 #  updated_at                 :datetime         not null
-#  updater_id                 :integer          
-#  weight                     :decimal(19, 4)   
+#  updater_id                 :integer
+#  weight                     :decimal(19, 4)
 #  with_tracking              :boolean          not null
 #
 #
-# == Fixture: product_natures
+# == Fixture: products
 #
-# product_natures_001:
+# products_001:
 #   active: true
 #   catalog_name: "Lorem ipsum"
 #   category_id: 1
@@ -90,3 +90,73 @@
 #   updater_id: 1
 #   with_tracking: true
 #
+
+product_natures_001:
+  active: true
+  catalog_name: "Lorem ipsum"
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  deliverable: true
+  stockable: true
+  name: "Lorem ipsum"
+  nature: "product"
+  number: 0
+  reduction_submissive: true
+  sales_account_id: 1
+  purchases_account_id: 1
+  category_id: 1
+  for_productions: true
+  for_purchases: true
+  for_sales: true
+  unit_id: 1
+  unquantifiable: false
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+product_natures_002:
+  active: true
+  catalog_name: "Lorem ipsum 2"
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2
+  deliverable: true
+  stockable: true
+  name: "Lorem ipsum 2"
+  nature: "product"
+  number: 0
+  reduction_submissive: true
+  sales_account_id: 1
+  purchases_account_id: 1
+  category_id: 1
+  for_productions: true
+  for_purchases: true
+  for_sales: true
+  unit_id: 1
+  unquantifiable: false
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+product_natures_003:
+  active: true
+  catalog_name: "Lorem ipsum 3"
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 3
+  deliverable: true
+  stockable: true
+  name: "Lorem ipsum 3"
+  nature: "product"
+  number: 0
+  reduction_submissive: true
+  sales_account_id: 1
+  purchases_account_id: 1
+  category_id: 1
+  for_productions: true
+  for_purchases: true
+  for_sales: true
+  unit_id: 1
+  unquantifiable: false
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
